Fixing Filter Tag when too many values are selected and text is too long.

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -453,6 +453,7 @@ nav.main-menu ul li.active:after {
   font-size: 0.88em;
   font-weight: normal;
   cursor: pointer;
+  white-space:initial;
 }
 
 .col-md-9 {
